# Clinical-Insight-Analyzer

./: README.md  main.py  pyproject.toml
pages/: data_upload.py  factor_analysis.py  statistical_analysis.py  visualization.py
utils/: data_processor.py  statistics.py  visualizations.py
